# LiveKit-Agent

./: .dockerignore  .gitignore  AGENTS.md  README.md  docker-compose.yml  requirements.txt
.agent/: README.md
.agent/SOP/: maintain_frontend_shadcn.md  update_livekit_agent_persona_and_tools.md
.agent/System/: project_architecture.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: JoinForm.tsx  KnowledgeSidebar.tsx  SessionControls.tsx  TranscriptPanel.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  scroll-area.tsx
services/livekit_agent/: .env.example  Dockerfile  README.md  pyproject.toml
services/livekit_agent/src/: personality.md
services/livekit_agent/src/agent/: main.py  rag_client.py  token_api.py
services/livekit_agent/src/backend_app/: main.py  rag_client.py  token_api.py
services/livekit_agent/src/livekit_agent/: __init__.py
services/livekit_agent/src/livekit_agent/rag/: __init__.py
services/livekit_agent/src/livekit_agent/tools/: __init__.py  pdf_rag_tool.py
services/livekit_agent/src/tools/: __init__.py  registry.py
services/rag_service/: .env.example  Dockerfile  README.md  pyproject.toml
services/rag_service/src/rag_service/: __init__.py  config.py  main.py  models.py  service.py
